# html5gum

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml  generate_entities.py  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  fuzz.yml  test.yml
benches/: data_state.rs  files.rs  patterns.rs
benches/files/: 0050.html  6D30.html
examples/: build_tree.rs  callback_emitter.rs  custom_emitter.rs  print_html5ever_actions.rs  scraper.rs  spans.rs  switch-state.rs  tokenize.rs  tokenize_with_html5ever_treebuilder.rs  tokenize_with_spans.rs  tokenize_with_state_switches.rs
fuzz/: .gitignore  Cargo.toml  Makefile  README.md
fuzz/fuzz_targets/: main_libfuzzer.rs
fuzz/src/: main.rs  main_afl.rs  main_cli.rs  testcase.rs
fuzz/src/testcase/: html5ever.rs  lolhtml.rs  mod.rs  old_html5gum.rs  span_invariants.rs  swc.rs
src/: arrayvec.rs  callback_emitter.rs  callbacks.rs  char_validator.rs  default_emitter.rs  emitter.rs  entities.rs  error.rs  html5ever_emitter.rs  htmlstring.rs  lib.rs  machine.rs  machine_helper.rs  never.rs  read_helper.rs  reader.rs  slow_reader.rs  span.rs  spans.rs  state.rs  testutils.rs  tokenizer.rs  trees.rs  utils.rs
src/emitters/: callback.rs  default.rs  emitter.rs  html5ever.rs  mod.rs
src/trees/: construction_dispatcher.rs  mod.rs  scopes.rs
tests/: html5lib_tokenizer.rs  html5lib_tree_builder.rs  test_html5lib.rs  test_spans.rs  testutils.rs
tests/custom-html5lib-tests/: custom.test  html5ever-diff.test
tests/custom-html5lib-tests/tokenizer/: error-order-bytes.test
tests/span-tests/: demo.html  demo.out
tests/test_spans/: callback.stdout.txt  callback_full.stdout.txt  input.html  naively_switch_states.stdout.txt  simple.stdout.txt
tests/test_spans_data/: spans.test
