[package]
name = "html5gum"
authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
description = "A WHATWG-compliant HTML5 tokenizer and tag soup parser."
edition = "2018"
readme = "README.md"
keywords = ["html", "html5", "whatwg", "parser", "tokenizer"]
categories = [ "parser-implementations", "web-programming" ]
license = "MIT"
repository = "https://github.com/untitaker/html5gum"
version = "0.5.2"
include = ["src/**/*", "LICENSE", "README.md", "benches"]

[dev-dependencies]
pretty_assertions = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
test-generator = "0.3.0"
serde_bytes = "0.11.5"
glob = "0.3.0"
libtest-mimic = "0.5.2"
iai = "0.1.1"

[features]
# By default this crate depends on the jetscii library for best performance.
# Disabling this feature will leave you with 100% safe Rust and no dependencies.
# This may come in handy if you encounter packaging/build problems.
default = ["jetscii"]

# If this feature is enabled, html5gum will expose private APIs and start
# printing debug information to stdout.
integration-tests = []

[dependencies]
jetscii = { version = "0.5.1", optional = true }

[[bench]]
name = "patterns"
harness = false

[[test]]
name = "html5lib-tokenizer"
path = "tests/html5lib_tokenizer.rs"
harness = false

[lib]
bench = false
