[package]
name = "html5gum"
authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
description = "A WHATWG-compliant HTML5 tokenizer and tag soup parser."
edition = "2018"
readme = "README.md"
keywords = ["html", "html5", "whatwg", "parser", "tokenizer"]
categories = [ "parser-implementations", "web-programming" ]
license = "MIT"
repository = "https://github.com/untitaker/html5gum"
version = "0.5.2"
include = ["src/**/*", "LICENSE", "README.md", "benches"]

[dev-dependencies]
pretty_assertions = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
serde_bytes = "0.11.5"
glob = "0.3.0"
iai = "0.1.1"
script-macro = { path = "../script-macro" }

[features]
# By default this crate depends on the jetscii library for best performance.
# Disabling this feature will leave you with 100% safe Rust and no dependencies.
# This may come in handy if you encounter packaging/build problems.
default = ["jetscii"]

[dependencies]
jetscii = { version = "0.5.1", optional = true }

[[bench]]
name = "patterns"
harness = false

[lib]
bench = false
