[package]
name = "html5gum-fuzz"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
html5gum = { path = "../" }
html5gum_old = { version = "0.4.0", package = "html5gum" }
afl = { version = "0.11.0", optional = true }
# https://github.com/servo/html5ever/pull/460
html5ever = { version = "*", git = "https://github.com/untitaker/html5ever", branch = "html5lib-tests-update" }
pretty_assertions = "1.0.0"


# lol-html and its dependencies
lol_html = { version = "0.4", features = ["integration_test"] }
encoding_rs = "0.8"
bytes = "1"
swc_common = "0.31.18"
swc_html_parser = "0.37.21"
swc_html_ast = "0.31.18"


# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[lib]
name = "testcase"
path = "src/testcase/mod.rs"

[[bin]]
name = "main_libfuzzer"
path = "fuzz_targets/main_libfuzzer.rs"
test = false
doc = false

[[bin]]
name = "main_afl"
path = "src/main_afl.rs"
test = false
doc = false
required-features = ["afl"]

[[bin]]
name = "main_cli"
path = "src/main_cli.rs"
test = false
doc = false
