[package]
name = "html5gum-fuzz"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
afl = { version = "0.15.0", optional = true }
html5gum = { path = "../" }
pretty_assertions = "1.0.0"

# thirdparty crates to fuzz against
html5gum_old = { version = "0.6.0", package = "html5gum" }
html5ever = "0.27.0"
swc_common = "2.0.1"
swc_html_parser = "2.0.0"
swc_html_ast = "2.0.0"

# lol-html and its dependencies
lol_html = { version = "2.0", features = ["integration_test"] }
encoding_rs = "0.8"
bytes = "1"


# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[lib]
name = "testcase"
path = "src/testcase/mod.rs"

[[bin]]
name = "main_libfuzzer"
path = "fuzz_targets/main_libfuzzer.rs"
test = false
doc = false

[[bin]]
name = "main_afl"
path = "src/main_afl.rs"
test = false
doc = false
required-features = ["afl"]

[[bin]]
name = "main_cli"
path = "src/main_cli.rs"
test = false
doc = false
